[package]
name = "tscore_span"
version = "0.0.0"
authors = ["The TS-Core Developers"]
edition = "2018"

[lib]
doctest = false

[dependencies]
rustc_serialize = { path = "../../rustc/rustc_serialize" }
rustc_macros = { path = "../../rustc/rustc_macros" }
rustc_data_structures = { path = "../../rustc/rustc_data_structures" }
rustc_index = { path = "../../rustc/rustc_index" }
rustc_arena = { path = "../../rustc/rustc_arena" }
scoped-tls = "1.0"
unicode-width = "0.1.4"
cfg-if = "0.1.2"
tracing = "0.1"
sha-1 = "0.9"
sha2 = "0.9"
md-5 = "0.9"
